--- a/source/Languages/English/Keyed/BetterLetters_Keys.xml
+++ b/source/Languages/English/Keyed/BetterLetters_Keys.xml
@@ -45,6 +45,7 @@ Click to cancel the reminder.</BetterLetters_SnoozedReminderButtonTooltip>
   <BetterLetters_SnoozeQuestTooltip>Snooze this quest until later. If it is pinned it will be unpinned.
   
 You will receive the "Quest available" letter again when the snooze ends. You will still receive notifications related to this quest, unlike dismissing it.</BetterLetters_SnoozeQuestTooltip>
+  <BetterLetters_QuestExpiredLabel>Quest Expired: {0}</BetterLetters_QuestExpiredLabel>
   <BetterLetters_PlaySettingsCreateReminder>Create a new reminder.
   
 Currently selected thing(s) can be automatically used as the reminder's "Jump To Location" target.</BetterLetters_PlaySettingsCreateReminder>
@@ -67,6 +68,7 @@ Current setting: {0} days</BetterLetters_MaxDurationTooltip>
   <BetterLetters_Settings_Tab_Pinning>Pinning</BetterLetters_Settings_Tab_Pinning>
   <BetterLetters_Settings_Tab_Snoozing>Snoozing</BetterLetters_Settings_Tab_Snoozing>
   <BetterLetters_Settings_Tab_Reminders>Reminders</BetterLetters_Settings_Tab_Reminders>
+  <BetterLetters_Settings_Tab_Quests>Quests</BetterLetters_Settings_Tab_Quests>
   <BetterLetters_Settings_Tab_Cache>Cache</BetterLetters_Settings_Tab_Cache>
   <BetterLetters_OpenSettingsTooltip>Open Better Letters mod settings to configure the appearance and placement of these buttons.
 
@@ -135,6 +137,20 @@ You can enable both or neither if you do not want this feature.</BetterLetters_S
   <BetterLetters_Settings_DoCreateReminderPlaySetting_Desc>Adds a button to the bottom right buttons that can be used as a shortcut to create a new reminder.</BetterLetters_Settings_DoCreateReminderPlaySetting_Desc>
   <BetterLetters_Settings_AutoSelectThingForReminders>Automatically target any selected Things</BetterLetters_Settings_AutoSelectThingForReminders>
   <BetterLetters_Settings_AutoSelectThingForReminders_Desc>Anything that you have selected when the reminder dialog is opened will be automatically chosen as the "Jump To" target for the reminder by default.</BetterLetters_Settings_AutoSelectThingForReminders_Desc>
+
+  <BetterLetters_Settings_ChangeExpiredQuestLetters>Update expired quest letters</BetterLetters_Settings_ChangeExpiredQuestLetters>
+  <BetterLetters_Settings_ChangeExpiredQuestLetters_Desc>If a "Quest available" letter for a non-dismissed quest is not dismissed itself (still on the stack on the right) when the quest expires, update the letter by:
+Changing "Quest available" to "Quest expired"
+Changing the type of letter to "NeutralLetter" (the grey type)
+Optionally, play a sound (see below).</BetterLetters_Settings_ChangeExpiredQuestLetters_Desc>
+  <BetterLetters_Settings_QuestExpirationSound>Sound when a quest expires</BetterLetters_Settings_QuestExpirationSound>
+  <BetterLetters_Settings_QuestExpirationSound_Desc>When a "Quest available" letter is on the stack and the quest expires, this sound will play to notify you.
+Quests letters that you have dismissed will not play a sound.</BetterLetters_Settings_QuestExpirationSound_Desc>
+  <BetterLetters_Settings_QuestExpirationSound_LetterArrive>Neutral Letter Arrive</BetterLetters_Settings_QuestExpirationSound_LetterArrive>
+  <BetterLetters_Settings_QuestExpirationSound_BadUrgentSmall>Negative Event</BetterLetters_Settings_QuestExpirationSound_BadUrgentSmall>
+  <BetterLetters_Settings_QuestExpirationSound_BadUrgent>Threat Small</BetterLetters_Settings_QuestExpirationSound_BadUrgent>
+  <BetterLetters_Settings_QuestExpirationSound_BadUrgentBig>Threat Big</BetterLetters_Settings_QuestExpirationSound_BadUrgentBig>
+  <BetterLetters_Settings_QuestExpirationSound_RitualNegative>Ritual Negative Outcome</BetterLetters_Settings_QuestExpirationSound_RitualNegative>
 
   <BetterLetters_TimeUnitTooltip>Choose the unit of time to adjust.</BetterLetters_TimeUnitTooltip>
   <BetterLetters_Ticks>Ticks</BetterLetters_Ticks>
